# llama_infer

./: .gitignore  CMakeLists.txt
cmake/: CPM.cmake  cuda.cmake
kuiper/include/base/: alloc.h  base.h  buffer.h  cuda_config.h
kuiper/include/op/: add.h  embedding.h  layer.h  matmul.h  mha.h  rmsnorm.h
kuiper/include/tensor/: tensor.h
kuiper/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cuda.cpp  base.cpp  buffer.cpp
kuiper/source/op/: add.cpp  embedding.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp
kuiper/source/op/kernel/: kernels_interface.cpp  kernels_interface.h
kuiper/source/op/kernel/cpu/: add_kernel.cpp  add_kernel.h  embedding_kernel.cpp  embedding_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h  scale_sum_kernel.cpp  scale_sum_kernel.h  softmax_kernel.cpp  softmax_kernel.h
kuiper/source/op/kernel/cuda/: add_kernel.cu  add_kernel.cuh  embedding_kernel.cu  embedding_kernel.cuh  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  mha_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh
kuiper/source/tensor/: tensor.cpp
test/: CMakeLists.txt
test/buffer/: test_buffer.cpp  test_cpu_allocator.cpp  test_gpu_allocator.cpp
test/op/: test_add.cpp  test_embedding.cpp  test_layer.cpp  test_matmul.cpp  test_mha.cpp  test_rmsnorm.cpp
test/optimized/: test_buffer.cpp  test_gpu_allocator.cpp
test/tensor/: test_tensor.cpp
